--- a/vercel_old.json
+++ b/vercel_old.json
@@ -1,23 +1,27 @@
 {
     "version": 2,
-    "framework": null,
+    "regions": ["fra1"],
     "functions": {
-        "api/index.php": { "runtime": "vercel-php@0.6.0" }
+        "api/index.php": {
+            "runtime": "vercel-php@0.7.1"
+        }
     },
     "routes": [
+        {
+            "src": "/build/(.*)",
+            "dest": "/build/$1"
+        },
         {
             "src": "/(.*)",
             "dest": "/api/index.php"
         }
     ],
+    "outputDirectory": "public",
+
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
-        "APP_URL": "https://yourproductionurl.com",
-
-        "APP_NAME": "Laravel",
-        "APP_KEY": "base64:mFShDn9JnFcNJzs4yQauuuP2fzTcFxPtiH5LOVT6sW4=",
-        "APP_TIMEZONE": "UTC",
+        "APP_URL": "https://tugas-2.vercel.app",
 
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
@@ -35,6 +39,10 @@
         "DB_PORT": "42096",
         "DB_DATABASE": "karyawan",
         "DB_USERNAME": "root",
-        "DB_PASSWORD": "VWrywVOIikPOjzsVqGrdRCFAxjYCSjRc"
+        "DB_PASSWORD": "VWrywVOIikPOjzsVqGrdRCFAxjYCSjRc",
+
+        "APP_NAME": "Laravel",
+        "APP_KEY": "base64:mFShDn9JnFcNJzs4yQauuuP2fzTcFxPtiH5LOVT6sW4=",
+        "APP_TIMEZONE": "UTC"
     }
 }
