--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
         }
     ],
     "env": {
-        "APP_ENV": "production",
+        "APP_ENV": "local",
         "APP_DEBUG": "true",
         "APP_URL": "https://yourproductionurl.com",
 
