--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,7 @@
     "version": 2,
     "framework": null,
     "functions": {
-        "api/index.php": {
-            "runtime": "vercel-php@0.7.1"
-        }
+        "api/index.php": { "runtime": "vercel-php@0.6.0" }
     },
     "routes": [
         {
@@ -15,11 +13,8 @@
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
-        "APP_URL": "https://yourproductionurl.com",
-
-        "APP_NAME": "Laravel",
+        "APP_URL": "https://tugas-2-vercel.app",
         "APP_KEY": "base64:mFShDn9JnFcNJzs4yQauuuP2fzTcFxPtiH5LOVT6sW4=",
-        "APP_TIMEZONE": "UTC",
 
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
@@ -30,13 +25,6 @@
 
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
-        "SESSION_DRIVER": "cookie",
-
-        "DB_CONNECTION": "mysql",
-        "DB_HOST": "viaduct.proxy.rlwy.net",
-        "DB_PORT": "42096",
-        "DB_DATABASE": "karyawan",
-        "DB_USERNAME": "root",
-        "DB_PASSWORD": "VWrywVOIikPOjzsVqGrdRCFAxjYCSjRc"
+        "SESSION_DRIVER": "cookie"
     }
 }
