--- a/public/.htaccess
+++ b/public/.htaccess
@@ -23,3 +23,5 @@
     # Send Requests To API Front Controller...
     RewriteRule ^api/.*$ /api/index.php [L]
 </IfModule>
+
+Header add Content-Security-Policy "upgrade-insecure-requests"
